expres-server/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project-kub
  name: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      volumes:
        - name: shared-file
          persistentVolumeClaim:
            claimName: file-claim
      containers:
        - name: todo
          image: mahk00/todo:1.0.3
          volumeMounts:
            - name: shared-file
              mountPath: /usr/src/app/files
        - name: todo-backend
          image: mahk00/todo-backend:2.8.0
          readinessProbe: 
            initialDelaySeconds: 15
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3000
          livenessProbe: 
            initialDelaySeconds: 45
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3000
