expres-server/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-service
spec:
  type: ClusterIP
  selector:
    app: todo
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3001
