expres-server/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: express-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service: 
            name: todo-backend-service
            port:
              number: 80
